--- a/Views/Home/City.cshtml
+++ b/Views/Home/City.cshtml
@@ -5,7 +5,7 @@
     var scheduleId = schedule?.Schedule_Id ?? ViewBag.ScheduleId ?? 0;
 }
 @await Html.PartialAsync("_ProgressFlowChart")
-<link rel="stylesheet" href="~/css/CalendarCity.css" />
+<link rel="stylesheet" href="~/css/City.css" />
 <div class="city-layout">
     <div class="city-search-panel">
         <div class="form-group">
