--- a/Views/Home/City.cshtml
+++ b/Views/Home/City.cshtml
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="~/css/City.css" />
 <div class="city-layout">
     <div class="city-search-panel">
-        <div class="form-group">
+        <div class="search-container">
             <input type="text" id="searchBox" class="form-control" placeholder="Search for a city" />
-            <button id="submitCityButton" class="btn btn-primary mt-2">Save City</button>
+            <button id="submitCityButton" class="btn btn-primary">Save City</button>
         </div>
 
         <h2>Top Locations in <span id="selectedCityName">...</span></h2>
